Fail on sync calls if specified
LMCROSSITXSADEPLOY-3200