@@ -1,8 +1,8 @@
 package org.cloudfoundry.multiapps.controller.process.steps;
 
 import java.text.MessageFormat;
-import java.util.Collections;
 import java.util.List;
+import java.util.function.Supplier;
 import com.sap.cloudfoundry.client.facade.CloudControllerClient;
 import com.sap.cloudfoundry.client.facade.CloudOperationException;
 import com.sap.cloudfoundry.client.facade.domain.ServiceOperation;
@@ -11,12 +11,16 @@ import org.cloudfoundry.multiapps.controller.client.lib.domain.CloudServiceInsta
 import org.cloudfoundry.multiapps.controller.core.util.OperationExecutionState;
 import org.cloudfoundry.multiapps.controller.process.Messages;
 import org.cloudfoundry.multiapps.controller.process.variables.Variables;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.context.annotation.Scope;
 
 @Named("updateServiceTagsStep")
 @Scope(BeanDefinition.SCOPE_PROTOTYPE)
 public class UpdateServiceTagsStep extends ServiceStep {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(UpdateServiceTagsStep.class);
 
     @Override
     protected OperationExecutionState executeOperation(ProcessContext context, CloudControllerClient client,
@@ -31,12 +35,17 @@ public class UpdateServiceTagsStep extends ServiceStep {
             client.updateServiceTags(service.getName(), service.getTags());
             getStepLogger().debug(Messages.SERVICE_TAGS_UPDATED, service.getName());
         } catch (CloudOperationException e) {
+            if (service.shouldFailOnTagsUpdateFailure() != null && !service.shouldFailOnTagsUpdateFailure()) {
+                getStepLogger().warn(
+                    MessageFormat.format(Messages.SERVICE_INSTANCE_0_TAGS_UPDATE_FAILED_IGNORING_FAILURE, service.getName()));
+                LOGGER.error(
+                    MessageFormat.format(Messages.SERVICE_INSTANCE_0_TAGS_UPDATE_FAILED_ERROR_1, service.getName(), e.getMessage()), e);
+                return OperationExecutionState.FINISHED;
+            }
             String exceptionDescription = MessageFormat.format(Messages.COULD_NOT_UPDATE_TAGS_OF_SERVICE, service.getName(),
                                                                e.getDescription());
-            CloudOperationException cloudOperationException = new CloudOperationException(e.getStatusCode(),
-                                                                                          e.getStatusText(),
+            CloudOperationException cloudOperationException = new CloudOperationException(e.getStatusCode(), e.getStatusText(),
                                                                                           exceptionDescription);
-
             processServiceActionFailure(context, service, cloudOperationException);
             return OperationExecutionState.FINISHED;
         }
@@ -47,9 +56,16 @@ public class UpdateServiceTagsStep extends ServiceStep {
     @Override
     protected List<AsyncExecution> getAsyncStepExecutions(ProcessContext context) {
         CloudServiceInstanceExtended serviceToProcess = context.getVariable(Variables.SERVICE_TO_PROCESS);
-        return Collections.singletonList(new PollServiceCreateOrUpdateOperationsExecution(getServiceOperationGetter(),
-                                                                                          getServiceProgressReporter(),
-                                                                                          serviceToProcess::shouldFailOnTagsUpdateFailure));
+        return List.of(
+            new PollServiceCreateOrUpdateOperationsExecution(getServiceOperationGetter(), getServiceProgressReporter(),
+                                                             shouldFailOnTagsUpdateFailure(serviceToProcess)));
+    }
+
+    private Supplier<Boolean> shouldFailOnTagsUpdateFailure(CloudServiceInstanceExtended serviceToProcess) {
+        if (serviceToProcess.shouldFailOnTagsUpdateFailure() != null) {
+            return serviceToProcess::shouldFailOnTagsUpdateFailure;
+        }
+        return () -> false;
     }
 
     @Override
